formatted the bottom

--- a/post.html
+++ b/post.html
@@ -151,7 +151,8 @@
     </p>
 
     <p>
-      Homer Gaines CPACC xirclebox@gmail.com https://www.twitter.com/xirclebox
+      Homer Gaines CPACC
     </p>
+    <a href="https://www.twitter.com/xirclebox" target="_blank">@xirclebox</a>
   </body>
 </html>
