added links to wcag sections

--- a/post.html
+++ b/post.html
@@ -79,8 +79,8 @@
 
     <h2>Perceivable</h2>
     <p>
-      The first section in the WCAG covers Perceivable. As mentioned earlier,
-      perceivable means users must be able to interpret the content by the use
+      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle1" target="_blank">The first section in the WCAG covers Perceivable. As mentioned earlier,
+      perceivable</a> means users must be able to interpret the content by the use
       of their available senses. Until the day comes when users can taste and
       smell digital content, content producers must focus on the user’s ability
       to see, hear, and or feel the available content. Section 1 - Perceivable
@@ -98,7 +98,7 @@
 
     <h2>Operable</h2>
     <p>
-      The second section, Operable, provides guidelines on how to ensure
+      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle2" target="_blank">The second section, Operable</a>, provides guidelines on how to ensure
       interactive content will be available to those using various types of
       technology. Because people use computers in different ways, there are a
       variety of methods for accessing and interacting with digital content.
@@ -111,7 +111,7 @@
 
     <h2>Understandable</h2>
     <p>
-      Next up is Understandable. Being able to understand content goes beyond
+      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle3" target="_blank">Next up is Understandable</a>. Being able to understand content goes beyond
       comprehending the words. It extends to the UI and UX as well. For example,
       presenting a consistent, well-structured navigation scheme throughout a
       website will allow for a better user experience. The most common
@@ -125,7 +125,7 @@
 
     <h2>Robust</h2>
     <p>
-      Last but surely not least, there’s Section 4 - Robust. When a product is
+      Last but surely not least, there’s <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle4" target="_blank">Section 4 - Robust</a>. When a product is
       robust, it is accessible to any number of devices. Providing accessible
       digital content begins with semantically correct, and valid markup. Doing
       so ensures the content will be compatible with a range of devices and user
