--- a/post.html
+++ b/post.html
@@ -58,7 +58,7 @@
     </p>
 
     <p>
-      Real quick, the Web Content Accessibility Guidelines or (WCAG) for short,
+      Real quick, the <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">Web Content Accessibility Guidelines</a> or (WCAG) for short,
       is a set of success criteria whose goal is to direct content developers in
       building accessible products for people with disabilities. In our
       societies, the term “disability” is thought to mainly apply to capital “D”
@@ -73,7 +73,7 @@
       products that need to conform. Depending on the product, it’s very
       possible that every rule in a particular section will not apply which is
       OK. For example, if the project doesn’t have video elements, the content
-      creators shouldn’t have to worry about Section 1.2 which focuses on
+      creators shouldn’t have to worry about <a href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-and-video-only-prerecorded" target="_blank">Section 1.2</a> which focuses on
       time-based media.
     </p>
 
@@ -109,18 +109,20 @@
       accessible to the various input devices.
     </p>
 
+    <div>Images of different assistive tech</div>
+
     <h2>Understandable</h2>
     <p>
       <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle3" target="_blank">Next up is Understandable</a>. Being able to understand content goes beyond
       comprehending the words. It extends to the UI and UX as well. For example,
-      presenting a consistent, well-structured navigation scheme throughout a
-      website will allow for a better user experience. The most common
-      disabilities are cognitive so content producers need to be cognizant about
+      presenting a <a href="https://www.w3.org/WAI/WCAG21/quickref/#consistent-navigation" target="_blank">consistent, well-structured navigation</a> scheme throughout a
+      website will allow for a better user experience. The <a href="https://dhds.cdc.gov/LP?CategoryId=GENHLTH&IndicatorId=FALL12M&ShowFootnotes=true&View=Map&yearId=YR1&stratCatId1=DISTYPE&stratId1=COGDIS&stratCatId2=&stratId2=&responseId=YESNO01&dataValueTypeId=AGEADJPREV&MapClassifierId=quantile&MapClassifierCount=5" target="_blank">most common
+      disabilities are cognitive</a> so content producers need to be cognizant about
       how the content is written and presented. Asking questions like “Is the
       message clear and concise? Or is it ambiguous?” are a great place to start
-      critically analyzing content. A key factor in improving the overall
-      experience by reducing cognitive load is avoiding complex sentence
-      structures and complicated interactions.
+      critically analyzing content. At some point in time, whether signing up for an event or purchasing movie tickets,
+      users will be required to interact with a form. Ensuring the form elements are labeled
+      correctly with clear instructions can be a key factor in improving the overall experience by reducing cognitive load.
     </p>
 
     <h2>Robust</h2>
@@ -138,11 +140,9 @@
       agents.Don’t get me wrong. I’m not saying that custom components a bad
       thing. But custom components should maintain as many of their native HTML
       accessibility attributes as possible. In fact, many of the JavaScript
-      frameworks such as Angular, React, and Vue have accessibility features
+      frameworks such as <a href="https://angular.io/guide/accessibility" target="_blank">Angular</a>, <a href="https://reactjs.org/docs/accessibility.html" target="_blank">React</a>, and <a href="https://github.com/vuejs/vuejs.org/pull/1002" target="_blank">Vue</a> have accessibility features
       built into their cores so teams can access them as needed.
     </p>
-
-    [Example and links to accessibility page for each framework ]
 
     <p>
       By having a better understanding of the WCAG and the POUR principles in
