added input image

--- a/post.html
+++ b/post.html
@@ -36,7 +36,6 @@
       difficulty perceiving the information, alternative methods should be used.
     </p>
 
-    <h3>Aria-label Example</h3>
     <script src="https://gist.github.com/xirclebox/90216d96c832aae24ab02476abdeae85.js"></script>
 
     <p>
@@ -58,39 +57,50 @@
     </p>
 
     <p>
-      Real quick, the <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">Web Content Accessibility Guidelines</a> or (WCAG) for short,
-      is a set of success criteria whose goal is to direct content developers in
-      building accessible products for people with disabilities. In our
-      societies, the term “disability” is thought to mainly apply to capital “D”
-      disabilities like Cerebral Palsy or Blindness, for example. But making
-      things accessible also helps individuals with impairments such as wearing
-      glasses or having a broken arm. All are disabilities that affect the
-      user’s ability to perform an action or perceive information in some way.
-      The WCAG is broken into four different sections that focus on specific
-      needs. These four sections are known as POUR, which is short for
-      Perceivable, Operable, Understandable, and Robust. Understanding the
-      guidelines in these sections will help teams identify the areas of their
-      products that need to conform. Depending on the product, it’s very
-      possible that every rule in a particular section will not apply which is
-      OK. For example, if the project doesn’t have video elements, the content
-      creators shouldn’t have to worry about <a href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-and-video-only-prerecorded" target="_blank">Section 1.2</a> which focuses on
-      time-based media.
+      Real quick, the
+      <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank"
+        >Web Content Accessibility Guidelines</a
+      >
+      or (WCAG) for short, is a set of success criteria whose goal is to direct
+      content developers in building accessible products for people with
+      disabilities. In our societies, the term “disability” is thought to mainly
+      apply to capital “D” disabilities like Cerebral Palsy or Blindness, for
+      example. But making things accessible also helps individuals with
+      impairments such as wearing glasses or having a broken arm. All are
+      disabilities that affect the user’s ability to perform an action or
+      perceive information in some way. The WCAG is broken into four different
+      sections that focus on specific needs. These four sections are known as
+      POUR, which is short for Perceivable, Operable, Understandable, and
+      Robust. Understanding the guidelines in these sections will help teams
+      identify the areas of their products that need to conform. Depending on
+      the product, it’s very possible that every rule in a particular section
+      will not apply which is OK. For example, if the project doesn’t have video
+      elements, the content creators shouldn’t have to worry about
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-and-video-only-prerecorded"
+        target="_blank"
+        >Section 1.2</a
+      >
+      which focuses on time-based media.
     </p>
 
     <h2>Perceivable</h2>
     <p>
-      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle1" target="_blank">The first section in the WCAG covers Perceivable. As mentioned earlier,
-      perceivable</a> means users must be able to interpret the content by the use
-      of their available senses. Until the day comes when users can taste and
-      smell digital content, content producers must focus on the user’s ability
-      to see, hear, and or feel the available content. Section 1 - Perceivable
-      has guidelines for providing transcripts for video content, or
-      machine-readable text for image-based content. Text descriptions give
-      anyone with hearing loss or in an environment where the hearing is
-      impaired, the ability to understand the information conveyed in the video.
-      Providing text descriptions for images in the form of Alt tags or a long
-      description makes the content available to assistive tech such as screen
-      readers and braille displays.
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#principle1"
+        target="_blank"
+        >The first section in the WCAG covers Perceivable</a
+      >. As mentioned earlier, perceivable means users must be able to interpret
+      the content by the use of their available senses. Until the day comes when
+      users can taste and smell digital content, content producers must focus on
+      the user’s ability to see, hear, and or feel the available content.
+      Section 1 - Perceivable has guidelines for providing transcripts for video
+      content, or machine-readable text for image-based content. Text
+      descriptions give anyone with hearing loss or in an environment where the
+      hearing is impaired, the ability to understand the information conveyed in
+      the video. Providing text descriptions for images in the form of Alt tags
+      or a long description makes the content available to assistive tech such
+      as screen readers and braille displays.
     </p>
 
     <h3>Text Descriptions for Images</h3>
@@ -98,50 +108,82 @@
 
     <h2>Operable</h2>
     <p>
-      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle2" target="_blank">The second section, Operable</a>, provides guidelines on how to ensure
-      interactive content will be available to those using various types of
-      technology. Because people use computers in different ways, there are a
-      variety of methods for accessing and interacting with digital content.
-      While the keyboard is a common tool used to interact with computers, it is
-      not the only method. There are individuals who have disabilities that
-      affect their motor control preventing them from using a mouse or keyboard.
-      Keeping this in mind, teams need to ensure their interactive controls are
-      accessible to the various input devices.
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#principle2"
+        target="_blank"
+        >The second section, Operable</a
+      >, provides guidelines on how to ensure interactive content will be
+      available to those using various types of technology. Because people use
+      computers in different ways, there are a variety of methods for accessing
+      and interacting with digital content. While the keyboard is a common tool
+      used to interact with computers, it is not the only method. There are
+      individuals who have disabilities that affect their motor control
+      preventing them from using a mouse or keyboard. Keeping this in mind,
+      teams need to ensure their interactive controls are accessible to the
+      various input devices.
     </p>
 
     <div>Images of different assistive tech</div>
 
     <h2>Understandable</h2>
     <p>
-      <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle3" target="_blank">Next up is Understandable</a>. Being able to understand content goes beyond
-      comprehending the words. It extends to the UI and UX as well. For example,
-      presenting a <a href="https://www.w3.org/WAI/WCAG21/quickref/#consistent-navigation" target="_blank">consistent, well-structured navigation</a> scheme throughout a
-      website will allow for a better user experience. The <a href="https://dhds.cdc.gov/LP?CategoryId=GENHLTH&IndicatorId=FALL12M&ShowFootnotes=true&View=Map&yearId=YR1&stratCatId1=DISTYPE&stratId1=COGDIS&stratCatId2=&stratId2=&responseId=YESNO01&dataValueTypeId=AGEADJPREV&MapClassifierId=quantile&MapClassifierCount=5" target="_blank">most common
-      disabilities are cognitive</a> so content producers need to be cognizant about
-      how the content is written and presented. Asking questions like “Is the
-      message clear and concise? Or is it ambiguous?” are a great place to start
-      critically analyzing content. At some point in time, whether signing up for an event or purchasing movie tickets,
-      users will be required to interact with a form. Ensuring the form elements are labeled
-      correctly with clear instructions can be a key factor in improving the overall experience by reducing cognitive load.
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#principle3"
+        target="_blank"
+        >Next up is Understandable</a
+      >. Being able to understand content goes beyond comprehending the words.
+      It extends to the UI and UX as well. For example, presenting a
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#consistent-navigation"
+        target="_blank"
+        >consistent, well-structured navigation</a
+      >
+      scheme throughout a website will allow for a better user experience. The
+      <a
+        href="https://dhds.cdc.gov/LP?CategoryId=GENHLTH&IndicatorId=FALL12M&ShowFootnotes=true&View=Map&yearId=YR1&stratCatId1=DISTYPE&stratId1=COGDIS&stratCatId2=&stratId2=&responseId=YESNO01&dataValueTypeId=AGEADJPREV&MapClassifierId=quantile&MapClassifierCount=5"
+        target="_blank"
+        >most common disabilities are cognitive</a
+      >
+      so content producers need to be cognizant about how the content is written
+      and presented. Asking questions like “Is the message clear and concise? Or
+      is it ambiguous?” are a great place to start critically analyzing content.
+      At some point in time, whether signing up for an event or purchasing movie
+      tickets, users will be required to interact with a form. Ensuring the form
+      elements are labeled correctly with clear instructions can be a key factor
+      in improving the overall experience by reducing cognitive load.
     </p>
 
     <h2>Robust</h2>
     <p>
-      Last but surely not least, there’s <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle4" target="_blank">Section 4 - Robust</a>. When a product is
-      robust, it is accessible to any number of devices. Providing accessible
-      digital content begins with semantically correct, and valid markup. Doing
-      so ensures the content will be compatible with a range of devices and user
-      agents used to present digital content. In this day and age, where teams
-      are using frameworks to develop single-page applications full of custom
-      components built from scratch, HTML’s built-in accessibility is often
-      stripped out. By writing semantically and contextually appropriate markup
-      to build simple to complex UI components, teams will automatically benefit
-      from the built in functionality and rendering provided by user
-      agents.Don’t get me wrong. I’m not saying that custom components a bad
-      thing. But custom components should maintain as many of their native HTML
-      accessibility attributes as possible. In fact, many of the JavaScript
-      frameworks such as <a href="https://angular.io/guide/accessibility" target="_blank">Angular</a>, <a href="https://reactjs.org/docs/accessibility.html" target="_blank">React</a>, and <a href="https://github.com/vuejs/vuejs.org/pull/1002" target="_blank">Vue</a> have accessibility features
-      built into their cores so teams can access them as needed.
+      Last but surely not least, there’s
+      <a
+        href="https://www.w3.org/WAI/WCAG21/quickref/#principle4"
+        target="_blank"
+        >Section 4 - Robust</a
+      >. When a product is robust, it is accessible to any number of devices.
+      Providing accessible digital content begins with semantically correct, and
+      valid markup. Doing so ensures the content will be compatible with a range
+      of devices and user agents used to present digital content. In this day
+      and age, where teams are using frameworks to develop single-page
+      applications full of custom components built from scratch, HTML’s built-in
+      accessibility is often stripped out. By writing semantically and
+      contextually appropriate markup to build simple to complex UI components,
+      teams will automatically benefit from the built in functionality and
+      rendering provided by user agents.Don’t get me wrong. I’m not saying that
+      custom components a bad thing. But custom components should maintain as
+      many of their native HTML accessibility attributes as possible. In fact,
+      many of the JavaScript frameworks such as
+      <a href="https://angular.io/guide/accessibility" target="_blank"
+        >Angular</a
+      >,
+      <a href="https://reactjs.org/docs/accessibility.html" target="_blank"
+        >React</a
+      >, and
+      <a href="https://github.com/vuejs/vuejs.org/pull/1002" target="_blank"
+        >Vue</a
+      >
+      have accessibility features built into their cores so teams can access
+      them as needed.
     </p>
 
     <p>
