--- a/post.html
+++ b/post.html
@@ -123,7 +123,9 @@
       various input devices.
     </p>
 
-    <div>Images of different assistive tech</div>
+    <div>
+      <img src="imgs/tech.jpg" alt="Image of verious input devices" />
+    </div>
 
     <h2>Understandable</h2>
     <p>
@@ -153,6 +155,8 @@
       in improving the overall experience by reducing cognitive load.
     </p>
 
+    <script src="https://gist.github.com/xirclebox/9f0129f70d96e6d8bc53fbb6f03aef00.js"></script>
+
     <h2>Robust</h2>
     <p>
       Last but surely not least, there’s
@@ -169,7 +173,7 @@
       accessibility is often stripped out. By writing semantically and
       contextually appropriate markup to build simple to complex UI components,
       teams will automatically benefit from the built in functionality and
-      rendering provided by user agents.Don’t get me wrong. I’m not saying that
+      rendering provided by user agents. Don’t get me wrong. I’m not saying that
       custom components a bad thing. But custom components should maintain as
       many of their native HTML accessibility attributes as possible. In fact,
       many of the JavaScript frameworks such as
@@ -185,6 +189,8 @@
       have accessibility features built into their cores so teams can access
       them as needed.
     </p>
+
+    <script src="https://gist.github.com/xirclebox/d51f6025a71e495511dba5dc0a456332.js"></script>
 
     <p>
       By having a better understanding of the WCAG and the POUR principles in
