removed html boiler

--- a/post.html
+++ b/post.html
@@ -1,205 +1,177 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>POUR the Foundation First</title>
-  </head>
-  <body>
-    <h1>POUR the Foundation First</h1>
+<h1>POUR the Foundation First</h1>
 
-    <blockquote>
-      “The issue in Web accessibility is the fact that blind and
-      visually-impaired people need the single biggest boost to achieve
-      equivalence since the real-world Web is a visual medium.” — Joe Clark
-    </blockquote>
+<blockquote>
+  “The issue in Web accessibility is the fact that blind and visually-impaired
+  people need the single biggest boost to achieve equivalence since the
+  real-world Web is a visual medium.” — Joe Clark
+</blockquote>
 
-    <p>
-      Esperanza Spalding sings about perception in her song, “Touch in Mine”
-      where she describes the sensation of being able to feel, listen, and learn
-      from the environment through the sense of touch. However, before something
-      can be perceived, that particular stimulus must be available and
-      furthermore, above the person’s absolute threshold. For example, depending
-      on a person’s age, a human’s ability to hear sound ranges from roughly
-      30Hz to 20kHz. The lower and upper limits can be thought of as the
-      absolute threshold because these numbers represent the lowest and highest
-      levels that a stimulus can be detected.
-    </p>
+<p>
+  Esperanza Spalding sings about perception in her song, “Touch in Mine” where
+  she describes the sensation of being able to feel, listen, and learn from the
+  environment through the sense of touch. However, before something can be
+  perceived, that particular stimulus must be available and furthermore, above
+  the person’s absolute threshold. For example, depending on a person’s age, a
+  human’s ability to hear sound ranges from roughly 30Hz to 20kHz. The lower and
+  upper limits can be thought of as the absolute threshold because these numbers
+  represent the lowest and highest levels that a stimulus can be detected.
+</p>
 
-    <p>
-      When it comes to the web, users must be able to perceive the information
-      provided using various forms of assistive technology such as refreshable
-      braille displays, screen readers, or screen magnifiers. Each of these
-      methods provides a way for the user to interpret the information
-      presented. With so many ways to convey information, if users are having
-      difficulty perceiving the information, alternative methods should be used.
-    </p>
+<p>
+  When it comes to the web, users must be able to perceive the information
+  provided using various forms of assistive technology such as refreshable
+  braille displays, screen readers, or screen magnifiers. Each of these methods
+  provides a way for the user to interpret the information presented. With so
+  many ways to convey information, if users are having difficulty perceiving the
+  information, alternative methods should be used.
+</p>
 
-    <script src="https://gist.github.com/xirclebox/90216d96c832aae24ab02476abdeae85.js"></script>
+<script src="https://gist.github.com/xirclebox/90216d96c832aae24ab02476abdeae85.js"></script>
 
-    <p>
-      When teams set out to build an accessible product, they often either get
-      struck with task paralysis or jump directly into solving the accessibility
-      violation without fully understanding the nature of the problem.
-      Developers may want to know what ARIA attributes to use. Designers will
-      want to know what colors they need to use to fix issues with their current
-      designs. Management will want to know if making something accessible has a
-      return on investment. While it’s not wrong to be concerned about these
-      details, not having a clear understanding of “the whys” can result in
-      teams looking at making things accessible as 'extra work', or even lead to
-      teams implementing things incorrectly. By having a better understanding of
-      the four basic principles of accessibility, teams will be able to ask
-      themselves the right questions for example: “What can I see?”, “How will a
-      screen reader convey this message to the user?”, or “Can I successfully
-      complete a task without using a mouse?” This is where the WCAG and POUR
-      come into play.
-    </p>
+<p>
+  When teams set out to build an accessible product, they often either get
+  struck with task paralysis or jump directly into solving the accessibility
+  violation without fully understanding the nature of the problem. Developers
+  may want to know what ARIA attributes to use. Designers will want to know what
+  colors they need to use to fix issues with their current designs. Management
+  will want to know if making something accessible has a return on investment.
+  While it’s not wrong to be concerned about these details, not having a clear
+  understanding of “the whys” can result in teams looking at making things
+  accessible as 'extra work', or even lead to teams implementing things
+  incorrectly. By having a better understanding of the four basic principles of
+  accessibility, teams will be able to ask themselves the right questions for
+  example: “What can I see?”, “How will a screen reader convey this message to
+  the user?”, or “Can I successfully complete a task without using a mouse?”
+  This is where the WCAG and POUR come into play.
+</p>
 
-    <p>
-      Real quick, the
-      <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank"
-        >Web Content Accessibility Guidelines</a
-      >
-      or (WCAG) for short, is a set of success criteria whose goal is to direct
-      content developers in building accessible products for people with
-      disabilities. In our societies, the term “disability” is thought to mainly
-      apply to capital “D” disabilities like Cerebral Palsy or Blindness, for
-      example. But making things accessible also helps individuals with
-      impairments such as wearing glasses or having a broken arm. All are
-      disabilities that affect the user’s ability to perform an action or
-      perceive information in some way. The WCAG is broken into four different
-      sections that focus on specific needs. These four sections are known as
-      POUR, which is short for Perceivable, Operable, Understandable, and
-      Robust. Understanding the guidelines in these sections will help teams
-      identify the areas of their products that need to conform. Depending on
-      the product, it’s very possible that every rule in a particular section
-      will not apply which is OK. For example, if the project doesn’t have video
-      elements, the content creators shouldn’t have to worry about
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-and-video-only-prerecorded"
-        target="_blank"
-        >Section 1.2</a
-      >
-      which focuses on time-based media.
-    </p>
+<p>
+  Real quick, the
+  <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank"
+    >Web Content Accessibility Guidelines</a
+  >
+  or (WCAG) for short, is a set of success criteria whose goal is to direct
+  content developers in building accessible products for people with
+  disabilities. In our societies, the term “disability” is thought to mainly
+  apply to capital “D” disabilities like Cerebral Palsy or Blindness, for
+  example. But making things accessible also helps individuals with impairments
+  such as wearing glasses or having a broken arm. All are disabilities that
+  affect the user’s ability to perform an action or perceive information in some
+  way. The WCAG is broken into four different sections that focus on specific
+  needs. These four sections are known as POUR, which is short for Perceivable,
+  Operable, Understandable, and Robust. Understanding the guidelines in these
+  sections will help teams identify the areas of their products that need to
+  conform. Depending on the product, it’s very possible that every rule in a
+  particular section will not apply which is OK. For example, if the project
+  doesn’t have video elements, the content creators shouldn’t have to worry
+  about
+  <a
+    href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-and-video-only-prerecorded"
+    target="_blank"
+    >Section 1.2</a
+  >
+  which focuses on time-based media.
+</p>
 
-    <h2>Perceivable</h2>
-    <p>
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#principle1"
-        target="_blank"
-        >The first section in the WCAG covers Perceivable</a
-      >. As mentioned earlier, perceivable means users must be able to interpret
-      the content by the use of their available senses. Until the day comes when
-      users can taste and smell digital content, content producers must focus on
-      the user’s ability to see, hear, and or feel the available content.
-      Section 1 - Perceivable has guidelines for providing transcripts for video
-      content, or machine-readable text for image-based content. Text
-      descriptions give anyone with hearing loss or in an environment where the
-      hearing is impaired, the ability to understand the information conveyed in
-      the video. Providing text descriptions for images in the form of Alt tags
-      or a long description makes the content available to assistive tech such
-      as screen readers and braille displays.
-    </p>
+<h2>Perceivable</h2>
+<p>
+  <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle1" target="_blank"
+    >The first section in the WCAG covers Perceivable</a
+  >. As mentioned earlier, perceivable means users must be able to interpret the
+  content by the use of their available senses. Until the day comes when users
+  can taste and smell digital content, content producers must focus on the
+  user’s ability to see, hear, and or feel the available content. Section 1 -
+  Perceivable has guidelines for providing transcripts for video content, or
+  machine-readable text for image-based content. Text descriptions give anyone
+  with hearing loss or in an environment where the hearing is impaired, the
+  ability to understand the information conveyed in the video. Providing text
+  descriptions for images in the form of Alt tags or a long description makes
+  the content available to assistive tech such as screen readers and braille
+  displays.
+</p>
 
-    <script src="https://gist.github.com/xirclebox/c2012c8f37039948ae38bf99a5408404.js"></script>
+<script src="https://gist.github.com/xirclebox/c2012c8f37039948ae38bf99a5408404.js"></script>
 
-    <h2>Operable</h2>
-    <p>
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#principle2"
-        target="_blank"
-        >The second section, Operable</a
-      >, provides guidelines on how to ensure interactive content will be
-      available to those using various types of technology. Because people use
-      computers in different ways, there are a variety of methods for accessing
-      and interacting with digital content. While the keyboard is a common tool
-      used to interact with computers, it is not the only method. There are
-      individuals who have disabilities that affect their motor control
-      preventing them from using a mouse or keyboard. Keeping this in mind,
-      teams need to ensure their interactive controls are accessible to the
-      various input devices.
-    </p>
+<h2>Operable</h2>
+<p>
+  <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle2" target="_blank"
+    >The second section, Operable</a
+  >, provides guidelines on how to ensure interactive content will be available
+  to those using various types of technology. Because people use computers in
+  different ways, there are a variety of methods for accessing and interacting
+  with digital content. While the keyboard is a common tool used to interact
+  with computers, it is not the only method. There are individuals who have
+  disabilities that affect their motor control preventing them from using a
+  mouse or keyboard. Keeping this in mind, teams need to ensure their
+  interactive controls are accessible to the various input devices.
+</p>
 
-    <div>
-      <img src="imgs/tech.jpg" alt="Image of verious input devices" />
-    </div>
+<div>
+  <img src="imgs/tech.jpg" alt="Image of verious input devices" />
+</div>
 
-    <h2>Understandable</h2>
-    <p>
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#principle3"
-        target="_blank"
-        >Next up is Understandable</a
-      >. Being able to understand content goes beyond comprehending the words.
-      It extends to the UI and UX as well. For example, presenting a
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#consistent-navigation"
-        target="_blank"
-        >consistent, well-structured navigation</a
-      >
-      scheme throughout a website will allow for a better user experience. The
-      <a
-        href="https://dhds.cdc.gov/LP?CategoryId=GENHLTH&IndicatorId=FALL12M&ShowFootnotes=true&View=Map&yearId=YR1&stratCatId1=DISTYPE&stratId1=COGDIS&stratCatId2=&stratId2=&responseId=YESNO01&dataValueTypeId=AGEADJPREV&MapClassifierId=quantile&MapClassifierCount=5"
-        target="_blank"
-        >most common disabilities are cognitive</a
-      >
-      so content producers need to be cognizant about how the content is written
-      and presented. Asking questions like “Is the message clear and concise? Or
-      is it ambiguous?” are a great place to start critically analyzing content.
-      At some point in time, whether signing up for an event or purchasing movie
-      tickets, users will be required to interact with a form. Ensuring the form
-      elements are labeled correctly with clear instructions can be a key factor
-      in improving the overall experience by reducing cognitive load.
-    </p>
+<h2>Understandable</h2>
+<p>
+  <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle3" target="_blank"
+    >Next up is Understandable</a
+  >. Being able to understand content goes beyond comprehending the words. It
+  extends to the UI and UX as well. For example, presenting a
+  <a
+    href="https://www.w3.org/WAI/WCAG21/quickref/#consistent-navigation"
+    target="_blank"
+    >consistent, well-structured navigation</a
+  >
+  scheme throughout a website will allow for a better user experience. The
+  <a
+    href="https://dhds.cdc.gov/LP?CategoryId=GENHLTH&IndicatorId=FALL12M&ShowFootnotes=true&View=Map&yearId=YR1&stratCatId1=DISTYPE&stratId1=COGDIS&stratCatId2=&stratId2=&responseId=YESNO01&dataValueTypeId=AGEADJPREV&MapClassifierId=quantile&MapClassifierCount=5"
+    target="_blank"
+    >most common disabilities are cognitive</a
+  >
+  so content producers need to be cognizant about how the content is written and
+  presented. Asking questions like “Is the message clear and concise? Or is it
+  ambiguous?” are a great place to start critically analyzing content. At some
+  point in time, whether signing up for an event or purchasing movie tickets,
+  users will be required to interact with a form. Ensuring the form elements are
+  labeled correctly with clear instructions can be a key factor in improving the
+  overall experience by reducing cognitive load.
+</p>
 
-    <script src="https://gist.github.com/xirclebox/9f0129f70d96e6d8bc53fbb6f03aef00.js"></script>
+<script src="https://gist.github.com/xirclebox/9f0129f70d96e6d8bc53fbb6f03aef00.js"></script>
 
-    <h2>Robust</h2>
-    <p>
-      Last but surely not least, there’s
-      <a
-        href="https://www.w3.org/WAI/WCAG21/quickref/#principle4"
-        target="_blank"
-        >Section 4 - Robust</a
-      >. When a product is robust, it is accessible to any number of devices.
-      Providing accessible digital content begins with semantically correct, and
-      valid markup. Doing so ensures the content will be compatible with a range
-      of devices and user agents used to present digital content. In this day
-      and age, where teams are using frameworks to develop single-page
-      applications full of custom components built from scratch, HTML’s built-in
-      accessibility is often stripped out. By writing semantically and
-      contextually appropriate markup to build simple to complex UI components,
-      teams will automatically benefit from the built in functionality and
-      rendering provided by user agents. Don’t get me wrong. I’m not saying that
-      custom components a bad thing. But custom components should maintain as
-      many of their native HTML accessibility attributes as possible. In fact,
-      many of the JavaScript frameworks such as
-      <a href="https://angular.io/guide/accessibility" target="_blank"
-        >Angular</a
-      >,
-      <a href="https://reactjs.org/docs/accessibility.html" target="_blank"
-        >React</a
-      >, and
-      <a href="https://github.com/vuejs/vuejs.org/pull/1002" target="_blank"
-        >Vue</a
-      >
-      have accessibility features built into their cores so teams can access
-      them as needed.
-    </p>
+<h2>Robust</h2>
+<p>
+  Last but surely not least, there’s
+  <a href="https://www.w3.org/WAI/WCAG21/quickref/#principle4" target="_blank"
+    >Section 4 - Robust</a
+  >. When a product is robust, it is accessible to any number of devices.
+  Providing accessible digital content begins with semantically correct, and
+  valid markup. Doing so ensures the content will be compatible with a range of
+  devices and user agents used to present digital content. In this day and age,
+  where teams are using frameworks to develop single-page applications full of
+  custom components built from scratch, HTML’s built-in accessibility is often
+  stripped out. By writing semantically and contextually appropriate markup to
+  build simple to complex UI components, teams will automatically benefit from
+  the built in functionality and rendering provided by user agents. Don’t get me
+  wrong. I’m not saying that custom components a bad thing. But custom
+  components should maintain as many of their native HTML accessibility
+  attributes as possible. In fact, many of the JavaScript frameworks such as
+  <a href="https://angular.io/guide/accessibility" target="_blank">Angular</a>,
+  <a href="https://reactjs.org/docs/accessibility.html" target="_blank">React</a
+  >, and
+  <a href="https://github.com/vuejs/vuejs.org/pull/1002" target="_blank">Vue</a>
+  have accessibility features built into their cores so teams can access them as
+  needed.
+</p>
 
-    <script src="https://gist.github.com/xirclebox/d51f6025a71e495511dba5dc0a456332.js"></script>
+<script src="https://gist.github.com/xirclebox/d51f6025a71e495511dba5dc0a456332.js"></script>
 
-    <p>
-      By having a better understanding of the WCAG and the POUR principles in
-      addition to making accessibility a core component of the project, teams
-      can begin to build more inclusive products with confidence.
-    </p>
+<p>
+  By having a better understanding of the WCAG and the POUR principles in
+  addition to making accessibility a core component of the project, teams can
+  begin to build more inclusive products with confidence.
+</p>
 
-    <p>
-      Homer Gaines CPACC
-    </p>
-    <a href="https://www.twitter.com/xirclebox" target="_blank">@xirclebox</a>
-  </body>
-</html>
+<p>
+  Homer Gaines CPACC
+</p>
+<a href="https://www.twitter.com/xirclebox" target="_blank">@xirclebox</a>
